--- a/plugins/css/sb-admin-2.css
+++ b/plugins/css/sb-admin-2.css
@@ -2357,7 +2357,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3FDB87;
+  background-color: #ec7710;
   border-color: #34f;
 }
 
@@ -2369,7 +2369,7 @@ fieldset:disabled a.btn {
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #3FDB87;
+  background-color: #ec7710;
   border-color: #4e73df;
   box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
 }
@@ -9900,8 +9900,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #3FDB87;
-  background-image: linear-gradient(180deg, #3FDB87 10%, #224abe 100%);
+  background-color: #ec7710;
+  background-image: linear-gradient(180deg, #ec7710 10%, #224abe 100%);
   background-size: cover;
 }
 
@@ -10861,19 +10861,19 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("../img/mcmflogojpg.jpg");
+  background: url("../img/logo.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .bg-register-image {
-  background: url("../img/mcmflogojpg.jpg");
+  background: url("../img/logo.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .bg-password-image {
-  background: url("../img/mcmflogojpg.jpg");
+  background: url("../img/logo.jpg");
   background-position: center;
   background-size: cover;
 }
